lootables added to pushpibald ores and block, crafting recipes for smelting ores and crafting pushpibald and pushpibald block

--- a/src/main/resources/assets/ppbmod/lang/en_us.json
+++ b/src/main/resources/assets/ppbmod/lang/en_us.json
@@ -4,5 +4,7 @@
 
   "block.ppbmod.pushpibald_block": "Block of pushpiBALD",
   "block.ppbmod.pushpibald_ore_stone": "pushpiBALD Ore",
-  "block.ppbmod.pushpibald_ore_deepslate": "Deepslate pushpiBALD Ore"
+  "block.ppbmod.pushpibald_ore_deepslate": "Deepslate pushpiBALD Ore",
+
+  "itemgroup.ppbmod.item.group": "Pushpinbird Mod"
 }
